--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/list_item_image"
@@ -22,7 +21,6 @@
         android:id="@+id/list_item_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ASIDOASNDOIAWDONIAWIOD"
         style="@style/list_item_body"/>
 
 </LinearLayout>
