--- a/app/src/main/res/layout/location_list.xml
+++ b/app/src/main/res/layout/location_list.xml
@@ -3,6 +3,6 @@
     android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:drawSelectorOnTop="true">
-
+    android:divider="@null"
+    android:dividerHeight="0dp">
 </ListView>
