--- a/app/src/main/res/layout/tourist.xml
+++ b/app/src/main/res/layout/tourist.xml
@@ -12,7 +12,7 @@
         app:tabMode="fixed"
         app:tabSelectedTextColor="@android:color/white"
         app:tabIndicatorColor="@android:color/white"
-        android:background="@color/colorPrimary" />
+        android:background="@color/tablayout_tourism" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/tourist_viewpager"
