--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,10 +15,25 @@
     <!-- Tourism category -->
     <color name="category_tourism">#FFC107</color>
 
-    <!-- TODO: Rest of category colors -->
+    <!-- Useful info category -->
+    <color name="category_info">#66BB6A</color>
 
-    <!-- Tourism list item header background -->
+
+
+
+    <!-- TOURISM -->
+    <!-- Tourism background -->
     <color name="background_tourism">#FFECB3</color>
+
+    <!-- Tourism tab layout -->
+    <color name="tablayout_tourism">#FFD54F</color>
+
+
+    <!-- USEFUL INFO -->
+    <!-- Info background -->
+    <color name="background_info">#DCEDC8</color>
+    <color name="background_info_2">#C5E1A5</color>
+
 
     <!-- TODO: Rest of list item background colors -->
 </resources>
