--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,8 +20,11 @@
         <item name="android:clickable">true</item>
     </style>
 
-    <!-- List_item TextView header style -->
-    <style name="list_item_header">
+
+
+
+    <!-- Tourism List_item TextView header style -->
+    <style name="tourism_list_item_header">
         <item name="android:paddingLeft">8dp</item>
         <item name="android:gravity">left</item>
         <item name="android:background">@color/background_tourism</item>
@@ -31,13 +34,33 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <!-- List_item TextView body style -->
-    <style name="list_item_body">
+    <!-- Tourism List_item TextView body style -->
+    <style name="tourism_list_item_body">
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:gravity">top</item>
         <item name="android:background">@color/background_tourism</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+
+
+
+    <!-- Useful info List_item TextView header style -->
+    <style name="info_list_item_header">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- Useful info List_item TextView body style -->
+    <style name="info_list_item_body">
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:gravity">top</item>
         <item name="android:textSize">16sp</item>
     </style>
 
